--- a/pandas-test.ipynb
+++ b/pandas-test.ipynb
@@ -203,7 +203,7 @@
     }
    ],
    "source": [
-    "#join\n",
+    "#concat\n",
     "pd.concat([label_table,feature_table],axis=1)\n",
     "# 满足我的要求"
    ]
