seaborn pandas 取uniq

--- a/pandas-test.ipynb
+++ b/pandas-test.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,27 +34,27 @@
      "output_type": "stream",
      "text": [
       "      label\n",
-      "0  0.538961\n",
-      "1  0.070293\n",
-      "2  0.893145\n",
-      "3  0.649362\n",
-      "4  0.408498\n",
-      "5  0.489013\n",
-      "6  0.992167\n",
-      "7  0.115729\n",
-      "8  0.964818\n",
-      "9  0.012340\n",
+      "0  0.632606\n",
+      "1  0.004332\n",
+      "2  0.817545\n",
+      "3  0.019003\n",
+      "4  0.704953\n",
+      "5  0.940746\n",
+      "6  0.030686\n",
+      "7  0.663057\n",
+      "8  0.567935\n",
+      "9  0.872870\n",
       "         f1        f2        f3        f4\n",
-      "0  0.033857  0.310760  0.329643  0.658334\n",
-      "1  0.376791  0.166780  0.130434  0.510528\n",
-      "2  0.628804  0.986148  0.889918  0.714725\n",
-      "3  0.974871  0.112850  0.663910  0.687845\n",
-      "4  0.170368  0.644470  0.595580  0.823503\n",
-      "5  0.554152  0.882449  0.852842  0.781168\n",
-      "6  0.776213  0.399704  0.757911  0.328923\n",
-      "7  0.787387  0.787427  0.676500  0.611522\n",
-      "8  0.402845  0.283437  0.196224  0.383492\n",
-      "9  0.098337  0.074794  0.114334  0.355195\n"
+      "0  0.862746  0.945843  0.010909  0.363646\n",
+      "1  0.302506  0.066073  0.518605  0.875364\n",
+      "2  0.992173  0.579042  0.232997  0.174538\n",
+      "3  0.206648  0.466731  0.933301  0.513507\n",
+      "4  0.977955  0.056595  0.010475  0.249276\n",
+      "5  0.443546  0.482316  0.739564  0.054043\n",
+      "6  0.680589  0.984729  0.452558  0.703832\n",
+      "7  0.949912  0.661279  0.680935  0.995492\n",
+      "8  0.053318  0.856195  0.747588  0.488759\n",
+      "9  0.706534  0.690040  0.899088  0.840678\n"
      ]
     }
    ],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,83 +101,83 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.538961</td>\n",
-       "      <td>0.033857</td>\n",
-       "      <td>0.310760</td>\n",
-       "      <td>0.329643</td>\n",
-       "      <td>0.658334</td>\n",
+       "      <td>0.632606</td>\n",
+       "      <td>0.862746</td>\n",
+       "      <td>0.945843</td>\n",
+       "      <td>0.010909</td>\n",
+       "      <td>0.363646</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.070293</td>\n",
-       "      <td>0.376791</td>\n",
-       "      <td>0.166780</td>\n",
-       "      <td>0.130434</td>\n",
-       "      <td>0.510528</td>\n",
+       "      <td>0.004332</td>\n",
+       "      <td>0.302506</td>\n",
+       "      <td>0.066073</td>\n",
+       "      <td>0.518605</td>\n",
+       "      <td>0.875364</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.893145</td>\n",
-       "      <td>0.628804</td>\n",
-       "      <td>0.986148</td>\n",
-       "      <td>0.889918</td>\n",
-       "      <td>0.714725</td>\n",
+       "      <td>0.817545</td>\n",
+       "      <td>0.992173</td>\n",
+       "      <td>0.579042</td>\n",
+       "      <td>0.232997</td>\n",
+       "      <td>0.174538</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.649362</td>\n",
-       "      <td>0.974871</td>\n",
-       "      <td>0.112850</td>\n",
-       "      <td>0.663910</td>\n",
-       "      <td>0.687845</td>\n",
+       "      <td>0.019003</td>\n",
+       "      <td>0.206648</td>\n",
+       "      <td>0.466731</td>\n",
+       "      <td>0.933301</td>\n",
+       "      <td>0.513507</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.408498</td>\n",
-       "      <td>0.170368</td>\n",
-       "      <td>0.644470</td>\n",
-       "      <td>0.595580</td>\n",
-       "      <td>0.823503</td>\n",
+       "      <td>0.704953</td>\n",
+       "      <td>0.977955</td>\n",
+       "      <td>0.056595</td>\n",
+       "      <td>0.010475</td>\n",
+       "      <td>0.249276</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.489013</td>\n",
-       "      <td>0.554152</td>\n",
-       "      <td>0.882449</td>\n",
-       "      <td>0.852842</td>\n",
-       "      <td>0.781168</td>\n",
+       "      <td>0.940746</td>\n",
+       "      <td>0.443546</td>\n",
+       "      <td>0.482316</td>\n",
+       "      <td>0.739564</td>\n",
+       "      <td>0.054043</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>0.992167</td>\n",
-       "      <td>0.776213</td>\n",
-       "      <td>0.399704</td>\n",
-       "      <td>0.757911</td>\n",
-       "      <td>0.328923</td>\n",
+       "      <td>0.030686</td>\n",
+       "      <td>0.680589</td>\n",
+       "      <td>0.984729</td>\n",
+       "      <td>0.452558</td>\n",
+       "      <td>0.703832</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>0.115729</td>\n",
-       "      <td>0.787387</td>\n",
-       "      <td>0.787427</td>\n",
-       "      <td>0.676500</td>\n",
-       "      <td>0.611522</td>\n",
+       "      <td>0.663057</td>\n",
+       "      <td>0.949912</td>\n",
+       "      <td>0.661279</td>\n",
+       "      <td>0.680935</td>\n",
+       "      <td>0.995492</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>0.964818</td>\n",
-       "      <td>0.402845</td>\n",
-       "      <td>0.283437</td>\n",
-       "      <td>0.196224</td>\n",
-       "      <td>0.383492</td>\n",
+       "      <td>0.567935</td>\n",
+       "      <td>0.053318</td>\n",
+       "      <td>0.856195</td>\n",
+       "      <td>0.747588</td>\n",
+       "      <td>0.488759</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>0.012340</td>\n",
-       "      <td>0.098337</td>\n",
-       "      <td>0.074794</td>\n",
-       "      <td>0.114334</td>\n",
-       "      <td>0.355195</td>\n",
+       "      <td>0.872870</td>\n",
+       "      <td>0.706534</td>\n",
+       "      <td>0.690040</td>\n",
+       "      <td>0.899088</td>\n",
+       "      <td>0.840678</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -185,19 +185,19 @@
       ],
       "text/plain": [
        "      label        f1        f2        f3        f4\n",
-       "0  0.538961  0.033857  0.310760  0.329643  0.658334\n",
-       "1  0.070293  0.376791  0.166780  0.130434  0.510528\n",
-       "2  0.893145  0.628804  0.986148  0.889918  0.714725\n",
-       "3  0.649362  0.974871  0.112850  0.663910  0.687845\n",
-       "4  0.408498  0.170368  0.644470  0.595580  0.823503\n",
-       "5  0.489013  0.554152  0.882449  0.852842  0.781168\n",
-       "6  0.992167  0.776213  0.399704  0.757911  0.328923\n",
-       "7  0.115729  0.787387  0.787427  0.676500  0.611522\n",
-       "8  0.964818  0.402845  0.283437  0.196224  0.383492\n",
-       "9  0.012340  0.098337  0.074794  0.114334  0.355195"
+       "0  0.632606  0.862746  0.945843  0.010909  0.363646\n",
+       "1  0.004332  0.302506  0.066073  0.518605  0.875364\n",
+       "2  0.817545  0.992173  0.579042  0.232997  0.174538\n",
+       "3  0.019003  0.206648  0.466731  0.933301  0.513507\n",
+       "4  0.704953  0.977955  0.056595  0.010475  0.249276\n",
+       "5  0.940746  0.443546  0.482316  0.739564  0.054043\n",
+       "6  0.030686  0.680589  0.984729  0.452558  0.703832\n",
+       "7  0.663057  0.949912  0.661279  0.680935  0.995492\n",
+       "8  0.567935  0.053318  0.856195  0.747588  0.488759\n",
+       "9  0.872870  0.706534  0.690040  0.899088  0.840678"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,14 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['./demo_data/GL000228.1.csv', './demo_data/GL000215.1.csv', './demo_data/6.csv']\n"
+      "['./demo_data/6.csv', './demo_data/7.csv', './demo_data/5.csv']\n"
      ]
     }
    ],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -250,17 +250,17 @@
      "output_type": "stream",
      "text": [
       "   Unnamed: 0  gc  length  count\n",
-      "0           0  33     440     97\n",
-      "1           1  51     671      2\n",
-      "2           2  57      50      3\n",
-      "3           3  20     162      1\n",
-      "4           4  42     294    184\n",
+      "0           0  33     440     86\n",
+      "1           1  87     229      1\n",
+      "2           2  51     671      3\n",
+      "3           3  20     162      2\n",
+      "4           4  42     294    192\n",
       "   Unnamed: 0  gc  length  count\n",
-      "0           0  33     440     81\n",
-      "1           1  18     428      1\n",
-      "2           2  51     671      2\n",
-      "3           3  57      50      1\n",
-      "4           4  42     294    195\n"
+      "0           0  33     440     82\n",
+      "1           1  51     671      1\n",
+      "2           2  37     754      5\n",
+      "3           3  42     294    190\n",
+      "4           4  66     416      1\n"
      ]
     }
    ],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -282,17 +282,17 @@
      "output_type": "stream",
      "text": [
       "   Unnamed: 0  gc  length  count     idx\n",
-      "0           0  33     440     97  33-440\n",
-      "1           1  51     671      2  51-671\n",
-      "2           2  57      50      3   57-50\n",
-      "3           3  20     162      1  20-162\n",
-      "4           4  42     294    184  42-294\n",
+      "0           0  33     440     86  33-440\n",
+      "1           1  87     229      1  87-229\n",
+      "2           2  51     671      3  51-671\n",
+      "3           3  20     162      2  20-162\n",
+      "4           4  42     294    192  42-294\n",
       "   Unnamed: 0  gc  length  count     idx\n",
-      "0           0  33     440     81  33-440\n",
-      "1           1  18     428      1  18-428\n",
-      "2           2  51     671      2  51-671\n",
-      "3           3  57      50      1   57-50\n",
-      "4           4  42     294    195  42-294\n"
+      "0           0  33     440     82  33-440\n",
+      "1           1  51     671      1  51-671\n",
+      "2           2  37     754      5  37-754\n",
+      "3           3  42     294    190  42-294\n",
+      "4           4  66     416      1  66-416\n"
      ]
     }
    ],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -315,11 +315,11 @@
      "text": [
       "        count_a  count_b\n",
       "idx                     \n",
-      "33-440     97.0     81.0\n",
-      "51-671      2.0      2.0\n",
-      "57-50       3.0      1.0\n",
-      "20-162      1.0      0.0\n",
-      "42-294    184.0    195.0\n"
+      "33-440     86.0     82.0\n",
+      "87-229      1.0      0.0\n",
+      "51-671      3.0      1.0\n",
+      "20-162      2.0      0.0\n",
+      "42-294    192.0    190.0\n"
      ]
     }
    ],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -340,17 +340,105 @@
      "text": [
       "         count_a   count_b\n",
       "idx                       \n",
-      "33-440  0.248272  0.192806\n",
-      "51-671 -0.033627 -0.032265\n",
-      "57-50  -0.030659 -0.035114\n",
-      "20-162 -0.036594 -0.037963\n",
-      "42-294  0.506433  0.517593\n"
+      "33-440  0.185371  0.169462\n",
+      "87-229 -0.075366 -0.076784\n",
+      "51-671 -0.069231 -0.073781\n",
+      "20-162 -0.072298 -0.076784\n",
+      "42-294  0.510524  0.493786\n"
      ]
     }
    ],
    "source": [
     "merge_data = (merge_data-merge_data.mean())/(merge_data.max()-merge_data.min())\n",
     "print(merge_data.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 找出一列中uniq的类型，然后进行统计\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     27\n",
+      "1     25\n",
+      "2     71\n",
+      "3     57\n",
+      "4     53\n",
+      "5     55\n",
+      "6     89\n",
+      "7     98\n",
+      "8     63\n",
+      "9      2\n",
+      "10    60\n",
+      "11    12\n",
+      "12    23\n",
+      "Name: depth, dtype: int64\n",
+      "13    30\n",
+      "14    89\n",
+      "15    24\n",
+      "16    77\n",
+      "17    18\n",
+      "18    63\n",
+      "19    68\n",
+      "20    37\n",
+      "21    49\n",
+      "22    90\n",
+      "23    18\n",
+      "24     0\n",
+      "25     0\n",
+      "26    69\n",
+      "Name: depth, dtype: int64\n",
+      "27    11\n",
+      "28    28\n",
+      "29    36\n",
+      "30    29\n",
+      "31    30\n",
+      "32    97\n",
+      "33    80\n",
+      "34    45\n",
+      "35    93\n",
+      "Name: depth, dtype: int64\n",
+      "36    50\n",
+      "37    50\n",
+      "38    79\n",
+      "39    87\n",
+      "40    46\n",
+      "41    86\n",
+      "42    84\n",
+      "43    60\n",
+      "44    22\n",
+      "45    42\n",
+      "46    43\n",
+      "47    96\n",
+      "48    63\n",
+      "49    63\n",
+      "50    59\n",
+      "51     2\n",
+      "52    21\n",
+      "53    32\n",
+      "54    21\n",
+      "55    18\n",
+      "56    79\n",
+      "57    98\n",
+      "58    94\n",
+      "Name: depth, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "pd_data = pd.read_csv('demo_data/CG.txt',sep='\\t')\n",
+    "for tp in pd_data['type'].unique():\n",
+    "    print(pd_data[pd_data['type'] == tp]['depth'])"
    ]
   },
   {
